# image_basic

./: CMakeLists.txt  README.md  cubecollapse.c  cubecollapse.h  extrapolate_nearestpixel.c  extrapolate_nearestpixel.h  im3Dto2D.c  im3Dto2D.h  image_add.c  image_add.h  image_basic.c  image_basic.h  imcontract.c  imcontract.h  imexpand.c  imexpand.h  imgetcircasym.c  imgetcircasym.h  imgetcircsym.c  imgetcircsym.h  imresize.c  imresize.h  imrotate.c  imrotate.h  imstretch.c  imstretch.h  imswapaxis2D.c  imswapaxis2D.h  indexmap.c  indexmap.h  loadfitsimgcube.c  loadfitsimgcube.h  measure_transl.c  measure_transl.h  naninf2zero.c  naninf2zero.h  streamave.c  streamave.h  streamfeed.c  streamfeed.h  (+4 more)
